# CuraFormulaeEngine

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: package.yml  unit-test.yml
apps/: CMakeLists.txt
apps/cmdline_parser/: CMakeLists.txt  cmdline_parser.cpp
include/cura-formulae-engine/: cura-formulae-engine.h  eval.h  formula.md
include/cura-formulae-engine/ast/: ast.h  comp_chain_expr.h  condition_expr.h  expr_ptr.h  fn_application_expr.h  index_expr.h  list_comprehension_expr.h  list_expr.h  slice_expr.h  tuple_expr.h  variable_expr.h
include/cura-formulae-engine/ast/binary_expr/: add_expr.h  and_expr.h  binary_expr.h  div_expr.h  mod_expr.h  mul_expr.h  or_expr.h  pow_expr.h  sub_expr.h
include/cura-formulae-engine/ast/primary_expr/: bool_expr.h  float_expr.h  int_expr.h  none_expr.h  primary_expr.h  string_expr.h
include/cura-formulae-engine/ast/unary_expr/: neg_expr.h  not_expr.h  unary_expr.h
include/cura-formulae-engine/env/: abs.h  all.h  any.h  env.h  float_fn.h  int_fn.h  len.h  map.h  math_atan.h  math_ceil.h  math_cos.h  math_degrees.h  math_floor.h  math_log.h  math_radians.h  math_sin.h  math_sqrt.h  math_tan.h  max.h  min.h  round.h  str.h  sum.h
include/cura-formulae-engine/parser/: bool_grammar.h  expr_grammar.h  list_comprehension_grammar.h  list_grammar.h  math_expr_grammar.h  nested_grammar.h  none_grammar.h  number_grammar.h  parens_grammar.h  parser.h  string_grammar.h  variable_grammar.h  variable_or_fn_application_grammar_or_array_indexing_grammar.h
src/: eval.cpp
src/ast/: ast.cpp  comp_chain_expr.cpp  condition_expr.cpp  expr_ptr.cpp  fn_application_expr.cpp  index_expr.cpp  list_comprehension_expr.cpp  list_expr.cpp  slice_expr.cpp  tuple_expr.cpp  variable_expr.cpp
src/ast/binary_expr/: add_expr.cpp  and_expr.cpp  binary_expr.cpp  div_expr.cpp  mod_expr.cpp  mul_expr.cpp  or_expr.cpp  pow_expr.cpp  sub_expr.cpp
src/ast/primary_expr/: string_expr.cpp
src/ast/unary_expr/: neg_expr.cpp  not_expr.cpp  unary_expr.cpp
src/env/: abs.cpp  all.cpp  any.cpp  env.cpp  float_fn.cpp  int_fn.cpp  len.cpp  map.cpp  math_atan.cpp  math_ceil.cpp  math_cos.cpp  math_degrees.cpp  math_floor.cpp  math_log.cpp  math_radians.cpp  math_sin.cpp  math_sqrt.cpp  math_tan.cpp  max.cpp  min.cpp  round.cpp  str.cpp  sum.cpp
src/parser/: parser.cpp
tests/: CMakeLists.txt  parser.cpp
